<resources>
    <string name="app_name">Call_Mapbox_API</string>
    <string name="semmi_nem_add_hozza">semmi nem add hozza</string>
    <string name="todo">TODO</string>
    <string name="close_approach_data_title">close_approach_data_title</string>
    <string name="absolute_magnitude_title">absolute_magnitude_title</string>
    <string name="relative_velocity_title">relative_velocity_title</string>
    <string name="distance_from_earth_title">distance_from_earth_title</string>
    <string name="estimated_diameter_title">estimated_diameter_title</string>
    <string name="location_details">location details</string>
    <string name="address">address</string>
    <string name="number_of_bays">Number of Bays</string>
    <string name="datelaststatusupdate">DateLastStatusUpdate</string>
    <string name="enter_address_city_or_zip_code">entrer_address</string>
    <string name="mapholder">mapholder</string>
    <string name="go">Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="magnify">magnify</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="msg_add_photos_opt">Add Photos (Optional)</string>
    <string name="msg_connection_avai">Connection Available</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_987_654_3210">987 654 3210</string>
    <string name="msg_how_to_add_lore">How to add Lorem ipsum ?</string>
    <string name="lbl_resend">RESEND</string>
    <string name="lbl_j_1772">J 1772</string>
    <string name="lbl_mennekes">Mennekes</string>
    <string name="lbl_ccd_basement">CCD Basement</string>
    <string name="msg_34_kw_0_02_kw">34 kW ($0.02/kW)</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="msg_consectetur_adi2">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
\u000bExercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.

Voluptate velit esse cillum dolore eu fugiat nulla ariaturepreh enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lbl_6_4_5_7_7_0">6 4 5 7 7 0</string>
    <string name="lbl_wifi">WiFi</string>
    <string name="msg_privacy_policie">Privacy Policies</string>
    <string name="msg_upload_photo_or">Upload Photo or Video</string>
    <string name="lbl_nearby">Nearby</string>
    <string name="lbl_12_jun">12 Jun</string>
    <string name="lbl_foods">Foods</string>
    <string name="lbl_ccs2_2">CCS2 2</string>
    <string name="msg_your_question_g">Your Question got answered</string>
    <string name="lbl_distance_unit">Distance Unit</string>
    <string name="lbl_spot">Spot</string>
    <string name="msg_ns_faqs_setting">ns\u000bFAQs\u000bSettings</string>
    <string name="lbl_ev">EV</string>
    <string name="lbl_verification">Verification</string>
    <string name="lbl_connections">Connections</string>
    <string name="msg_standard_3_7"><![CDATA[Standard (<3.7 kW)\u000bSemi Fast (3.7 -20 kW)\u000bFast (20-43 kW)\u000bUltra Fast (> 43 kW)]]></string>
    <string name="msg_town_center_par">Town Center Park</string>
    <string name="msg_or_continue_wit">Or Continue with</string>
    <string name="msg_55_kw_0_05_kw">55 kW ($0.05/kW)</string>
    <string name="msg_where_are_lorem">Where are Lorem ipsum dolor ?</string>
    <string name="lbl_light_mode">Light mode</string>
    <string name="lbl_2_points">2 points</string>
    <string name="lbl_3_points">3 points</string>
    <string name="lbl_google">Google</string>
    <string name="lbl_14_jun">14 Jun</string>
    <string name="lbl_your_ev_car">Your EV Car</string>
    <string name="msg_7_20_kw_fast">.7 -20 kW)\u000bFast (20-43 kW)\u000bUltra Fast (&gt; 43 kW)</string>
    <string name="msg_home_favorites">Home\u000bFavorites\u000bTerms &amp; Conditions\u000bFAQs\u000bSettings</string>
    <string name="lbl_amusive_park">Amusive Park</string>
    <string name="msg_what_is_lorem">What is  Lorem ipsum dolor? </string>
    <string name="lbl_km_kilometer">Km (Kilometer)</string>
    <string name="lbl_filters">Filters</string>
    <string name="lbl_0_25_min_left">0:25 min left</string>
    <string name="msg_45_kw_0_08_kw">45 kW ($0.08/kW)</string>
    <string name="msg_recent_check_in">Recent Check-ins</string>
    <string name="msg_a233_world_trad">A233 World Trade Park, New York</string>
    <string name="msg_enter_phone_num">Enter Phone Number</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_speeds">Speeds</string>
    <string name="lbl_add_photos">Add Photos </string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_shopping">Shopping</string>
    <string name="lbl_samantha_smith">Samantha Smith</string>
    <string name="lbl_3_8km_10_min">3.8km (10 min)</string>
    <string name="lbl_english">English</string>
    <string name="msg_looks_like_you">"Looks like you're not registered yet"</string>
    <string name="lbl_12_points">12 Points</string>
    <string name="lbl_add_check_in">Add Check-in</string>
    <string name="lbl_washroom">Washroom</string>
    <string name="lbl_amenities">Amenities</string>
    <string name="msg_how_to_start_lo">How to start Lorem ipsum dolor ?</string>
    <string name="msg_enter_6_digit_o">Enter 6 digit OTP</string>
    <string name="lbl_get_direction">Get Direction</string>
    <string name="lbl_samantha_smith2">Samantha\u000bSmith</string>
    <string name="lbl_hey_mate">Hey Mate,</string>
    <string name="msg_by_continue_you">By Continue you\u2019re agreed to our\u000bTerms &amp; Conditions</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_tesla">Tesla</string>
    <string name="msg_home_favorites2">Home\u000bFavorites\u000bTerms &amp; Conditio</string>
    <string name="msg_change_your_pre">Change your preferences</string>
    <string name="msg_enter_verificat">Enter verification code send on given number</string>
    <string name="msg_call_center_par">Call Center Park, Business Street, New York</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_gerorge_smith">Gerorge Smith</string>
    <string name="msg_terms_conditi">Terms &amp; Conditions</string>
    <string name="lbl_enroute">Enroute</string>
    <string name="lbl_ccs2">CCS2</string>
    <string name="msg_by_continue_you2">By Continue you\u2019re agreed to our\u000b</string>
    <string name="msg_select_app_lang">Select App Language</string>
    <string name="msg_know_about_comp2">Know about company Policies</string>
    <string name="msg_08_00_am_20_0">08:00 am - 20:00 pm</string>
    <string name="msg_when_can_we_lor">When can we Lorem ipsum dolor ?</string>
    <string name="msg_share_your_expe">Share your experience</string>
    <string name="lbl_8_points">8 Points</string>
    <string name="msg_search_charging">Search Charging Spot</string>
    <string name="lbl_4_points">4 points</string>
    <string name="lbl_faqs">FAQs</string>
    <string name="msg_a233_world_trad2">A233 World Trade Park</string>
    <string name="lbl_sign_up_now">Sign up Now</string>
    <string name="lbl_app_theme_mode">App Theme Mode</string>
    <string name="lbl_sign_in_now">Sign in Now</string>
    <string name="lbl_tesla_model_x">Tesla Model X</string>
    <string name="lbl_optional">(Optional)</string>
    <string name="msg_enter_starting">Enter Starting point</string>
    <string name="msg_enter_your_feed">Enter your feedback</string>
    <string name="msg_standard_3_72">Standard (&lt;3.7 kW)\u000bSemi Fast (3</string>
    <string name="lbl_open">Open</string>
    <string name="msg_consectetur_adi">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.\u000b\u000bExercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatureprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lbl_1_point">1 point</string>
    <string name="msg_how_to_lorem_ip">How to Lorem ipsum dolor ?</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_business_center">Business Center</string>
    <string name="msg_36_kw_0_04_kw">36 kW ($0.04/kW)</string>
    <string name="lbl_pharmacy">Pharmacy</string>
    <string name="msg_emili_williamso">Emili Williamson</string>
    <string name="lbl_chademo">Chademo</string>
    <string name="msg_know_about_comp">Know about company conditions</string>
    <string name="msg_samanthasmith_e">Samanthasmith@email.com</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>