<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/linearColumnjcounter"
        style="@style/groupStylegray_100cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtType"
            style="@style/txtPoppinssemibold16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_add_check_in"
            tools:text="@string/lbl_j_1772" />

        <TextView
            android:id="@+id/txtPrice"
            style="@style/txtPoppinsmedium12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="@string/msg_55_kw_0_05_kw" />
        <TextView
            android:id="@+id/txtAmpVolt"
            style="@style/txtPoppinsmedium12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:singleLine="true"
            tools:text="@string/amp_volt" />

        <LinearLayout
            android:id="@+id/linearRowpointscounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPointsCounter"
                style="@style/txtPoppinsmedium12_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="14dp"
                android:layout_weight="0.44"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="@string/lbl_2_points" />

            <ImageView
                android:id="@+id/imageImgMennekes"
                android:layout_width="61dp"
                android:layout_height="49dp"
                android:layout_marginStart="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/img_imgmennekes"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_imgmennekes" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
