<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearColumnavat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearRowavat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageAvat"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_avat" />

            <LinearLayout
                android:id="@+id/linearColumnemiliwilliamso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.86"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtEmiliWilliamso"
                    style="@style/txtPoppinssemibold16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    tools:text="@string/msg_emili_williamso" />

                <LinearLayout
                    android:id="@+id/linearRowteslamodelx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTeslaModelX"
                        style="@style/txtPoppinsmedium12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="0.69"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="@string/lbl_tesla_model_x" />

                    <TextView
                        android:id="@+id/txtJunCounter"
                        style="@style/txtPoppinsmedium12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="153dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="0.31"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="@string/lbl_14_jun" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtDescription"
            style="@style/txtPoppinsmedium12_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="10dp"
            tools:text="@string/msg_lorem_ipsum_dol" />

        <LinearLayout
            android:id="@+id/linearRowlayer552"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLayer552"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_layer552" />

            <ImageView
                android:id="@+id/imageLayer553"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="70dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_layer553" />

            <ImageView
                android:id="@+id/imageLayer554"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_layer554" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
